# minifetch-rs

./: .gitattributes  .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  deny.toml  justfile  mise.toml  tessl.json
.github/: dependabot.yml
.github/workflows/: ci.yml
.serena/: project.yml
src/: main.rs
tests/: integration_test.rs
